name:                haskell-web-bootstrap
version:             0.1.0.0
synopsis:            Bootstrap3 classes and such for Haskell
description:         Please see README.md
homepage:            https://github.com/adarqui/haskell-web-bootstrap#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
copyright:           2016 Andrew Darqui
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.Bootstrap3
                       Web.Bootstrap3.InputGroup
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite haskell-web-bootstrap-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-web-bootstrap
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adarqui/haskell-web-bootstrap
